--- a/fury161/fury161/templates/base.html
+++ b/fury161/fury161/templates/base.html
@@ -18,23 +18,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         {# Global stylesheets #}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bundle.css' %}">
 
         {% block extra_css %}
             {# Override this in templates to add extra stylesheets #}
         {% endblock %}
     </head>
 
+
+
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
-
-        {% block content %}{% endblock %}
-
+        <section class="section">
+          <div class="container">
+            <h1 class="title">{{ page.title }}</h1>
+            {% block content %}{% endblock %}
+          </div>
+        </section>
         {# Global javascript #}
-        <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/bundle.js' %}"></script>
 
         {% block extra_js %}
             {# Override this in templates to add extra javascript #}
         {% endblock %}
-    </body>
+      </body>
+
 </html>
